@@ -51,8 +51,8 @@ public class YSplash extends JWindow {
          * AJH: Changed to support dual-head graphics environments better
          */
         Dimension labelSize = l.getPreferredSize();
-        Double screenWidth = new Double(GraphicsEnvironment.getLocalGraphicsEnvironment().getMaximumWindowBounds().getWidth());
-        Double screenHeight = new Double(GraphicsEnvironment.getLocalGraphicsEnvironment().getMaximumWindowBounds().getHeight());
+        Double screenWidth = Double.valueOf(GraphicsEnvironment.getLocalGraphicsEnvironment().getMaximumWindowBounds().getWidth());
+        Double screenHeight = Double.valueOf(GraphicsEnvironment.getLocalGraphicsEnvironment().getMaximumWindowBounds().getHeight());
 
         setLocation(screenWidth.intValue() / 2 - (labelSize.width / 2),
                     screenHeight.intValue() / 2 - (labelSize.height / 2));
